--- a/package.json
+++ b/package.json
@@ -1,31 +1,67 @@
 {
-  "name": "feedback",
+  "name": "isomorphic-react",
   "version": "1.0.0",
-  "description": "",
+  "description": "An isomorphic React application implementing latest development standards",
   "main": "index.js",
-  "engines": {
-    "node": "12.16.1",
-    "npm": "6.13.4"
-  },
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
-    "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "build": "cross-env webpack --config ./webpack.config.prod.babel.js",
+    "postinstall": "npm install -g babel-cli@7.0.0-beta.3 cross-env@5.0.5 webpack@3.6.0",
+    "start": "npm run start-prod",
+    "start-dev": "cross-env NODE_ENV=development babel-node server --useServerRender=true --useLiveData=false",
+    "start-prod": "npm run build && cross-env NODE_ENV=production babel-node server --useServerRender=true --useLiveData=false",
+    "test": "jest",
+    "test-watch": "jest --watch"
   },
   "keywords": [],
-  "author": "Ashish Tayal",
-  "license": "ISC",
+  "author": "Daniel Stern (Code Whisperer)",
+  "license": "MIT",
   "dependencies": {
-    "cookie-session": "^1.4.0",
-    "express": "^4.15.3",
-    "mongoose": "^5.9.7",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-regenerator": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-regenerator-runtime": "^6.5.0",
+    "copy-webpack-plugin": "^4.1.1",
+    "cross-env": "^5.0.5",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "express": "^4.16.1",
+    "express-yields": "^1.1.1",
+    "fs-extra": "^4.0.2",
+    "history": "^4.7.2",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "^24.8.0",
+    "lodash": "^4.17.4",
+    "optimist": "^0.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-markdown": "^2.5.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "react-router-server": "^4.2.2",
+    "react-test-renderer": "^16.8.6",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.15.6",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.42.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.19.1"
+  },
+  "jest": {
+    "verbose": true,
+    "testURL": "http://localhost/"
   },
   "devDependencies": {
-    "concurrently": "^5.1.0",
-    "http-proxy-middleware": "^0.21.0",
-    "nodemon": "^2.0.3"
+    "webpack-cli": "^3.3.11"
   }
 }
