--- a/package.json
+++ b/package.json
@@ -11,17 +11,15 @@
     "start": "node index.js",
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev:inspect": "concurrently \"npm run server:inspect\" \"npm run client\""
   },
   "keywords": [],
   "author": "Ashish Tayal",
   "license": "ISC",
   "dependencies": {
-    "cookie-session": "^1.4.0",
-    "express": "^4.15.3",
-    "mongoose": "^5.9.7",
-    "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "body-parser": "^1.19.0",
+    "express": "^4.15.3"
   },
   "devDependencies": {
     "concurrently": "^5.1.0",
