--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server": "nodemon index.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "dev:inspect": "concurrently \"npm run server:inspect\" \"npm run client\""
+    "dev:inspect": "concurrently \"npm run server:inspect\" \"npm run client\"",
+    "node:stop": "killall node"
   },
   "keywords": [],
   "author": "Ashish Tayal",
