Add redux dev tools

--- a/Final/package.json
+++ b/Final/package.json
@@ -62,6 +62,7 @@
     "testURL": "http://localhost/"
   },
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.9",
     "webpack-cli": "^3.3.11"
   }
 }
